# jubilant-db

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  FIRST_STEPS.md  FUTURE_UPDATES.md  LICENSE  MAIN_SPECIFICATION.md  README.md  TECH_SPECIFICATION.md
.ccache/2/a/: stats
.github/workflows/: ci.yml
docs/: README.md  ci-setup.md  code-review-findings.md  execplan-complex-transactions.md  flatbuffers-wire-transition.md  long-range-roadmap.md  roadmap.md  server-roadmap.md  server-runtime.md  testing.md  txn-wire-v0.0.2.md  v0.0.2-plan.md
docs/execplans/: complex-transactions-execplan.md  storage_drivers_execplan.md
schemas/: disk.fbs
src/: pager.cpp  pager.h
src/config/: config.cpp  config.h
src/lock/: lock_manager.cpp  lock_manager.h
src/meta/: manifest.cpp  manifest.h  superblock.cpp  superblock.h
src/server/: main.cpp  network_server.cpp  network_server.h  server.cpp  server.h  transaction_receiver.cpp  transaction_receiver.h  worker.cpp  worker.h
src/storage/: checksum.cpp  checksum.h  simple_store.cpp  simple_store.h  storage_common.h
src/storage/btree/: btree.cpp  btree.h
src/storage/checkpoint/: checkpointer.cpp  checkpointer.h
src/storage/pager/: pager.cpp  pager.h
src/storage/ttl/: ttl_clock.cpp  ttl_clock.h
src/storage/vlog/: value_log.cpp  value_log.h
src/storage/wal/: wal_manager.cpp  wal_manager.h  wal_record.h
src/txn/: transaction_context.cpp  transaction_context.h  transaction_request.cpp  transaction_request.h
tests/: btree_tests.cpp  checkpoint_tests.cpp  config_tests.cpp  lock_manager_tests.cpp  manifest_tests.cpp  network_server_tests.cpp  pager_tests.cpp  server_worker_tests.cpp  simple_store_tests.cpp  superblock_tests.cpp  transaction_context_tests.cpp  transaction_request_tests.cpp  unit_tests.cpp  value_log_tests.cpp  wal_tests.cpp
tests/integration/: dual_client_integration_tests.cpp  integration_test_utils.cpp  integration_test_utils.h  server_process_integration_tests.cpp
tools/: __init__.py
tools/clients/: __init__.py
tools/clients/python/: __init__.py  echo_stub.py  framing_probe.py  jubectl_client.py  jubilant_client.py  server_harness.py
tools/jubectl/: main.cpp  remote_client.cpp  remote_client.h
